services/gateway/cmd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: jixifood
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80        # Expose port 80 externally (for Ingress to use)
      targetPort: 3000 # Forward traffic to container's port 3000
